.k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - financeiro.limateixeira.site
      secretName: letsencrypt-tls
  rules:
    - host: financeiro.limateixeira.site
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: financialweb-service
                port:
                  number: 80
